[package]
name = "json_db_rs"
version = "0.1.0"
authors = ["Boss <bossnathakorn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
