[package]
name = "json_db_rs"
version = "0.1.1"
authors = ["Boss <bossnathakorn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "main"
path = "examples/main.rs"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
futures = "0.3.14"
zstd = "0.7.0"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }
