[package]
name = "json_db_rs"
version = "0.3.0"
authors = ["Boss <bossnathakorn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "main"
path = "examples/main.rs"

[dependencies]
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.66"
zstd = "0.9.0"

[dev-dependencies]
futures = "0.3.16"
tokio = { version = "1.10.0", features = ["full"] }
